--- a/nbs/04_PythonWalkThrough.ipynb
+++ b/nbs/04_PythonWalkThrough.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
+   "id": "2f0be8ff",
    "metadata": {},
    "source": [
     "---\n",
@@ -9,7 +10,8 @@
     "title: 'Python for Programmers: Fast Track to Productivity'\n",
     "\n",
     "---\n",
-    "\n"
+    "\n",
+    "date: 2025-10-02\n"
    ]
   },
   {
