--- a/nbs/05_GPTDecoder.ipynb
+++ b/nbs/05_GPTDecoder.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
+   "id": "8b7fd09e",
    "metadata": {},
    "source": [
     "---\n",
@@ -9,7 +10,8 @@
     "title: 'Building a Text Only Nano-GPT from Scratch: Character-Level Shakespeare Generation'\n",
     "\n",
     "---\n",
-    "\n"
+    "\n",
+    "date: 2025-10-15\n"
    ]
   },
   {
@@ -56,9 +58,7 @@
   {
    "cell_type": "markdown",
    "id": "ef819eb8",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "## Dataset & Preprocessing"
    ]
@@ -66,9 +66,7 @@
   {
    "cell_type": "markdown",
    "id": "24871304",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "A language model learns the joint probability distribution of words in a sentence—which is just a fancy way of saying it learns to predict the next word. For this step, big labs scrape massive amounts of text from the web and feed it to their models to learn from. There are big dataset like *FineWeb edu* or *common crawl* data. As I am extremely GPU poor, we will consider the Shakespeare dataset i.e. some of the literature he produced. The data set is taken from the legendary *Karpathy's Nanogpt* series. In fact this blog is a technical write up for the educational [Zero to hero](https://www.youtube.com/watch?v=VMj-3S1tku0&list=PLAqhIrjkxbuWI23v9cThsA9GvCAUhRvKZ) created by him.\n",
     "\n",
@@ -79,11 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0c40935a",
-   "metadata": {
-    "time_run": "9:10:39a"
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -167,9 +163,7 @@
   {
    "cell_type": "markdown",
    "id": "11420f27",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "For the string \"Hello\", here's how the autoregressive training creates examples:\n",
     "\n",
@@ -221,9 +215,7 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "4392655d",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "### Token Embeddings\n",
     "Embeddings are the individual vector representations we learn for each token in our vocabulary. This converts each token (character, in our case) into a multi-dimensional vector—typically something like 64, 128, or 512 numbers—that captures relationships between tokens. The model learns these vectors during training. Larger embedding dimensions lead to stronger learning of these patterns. For example, 'a' and 'e' might be used in similar contexts (both are vowels), so their embeddings become similar. These embeddings start as random numbers, and through training, the model gradually adjusts them to find optimal values that capture meaningful patterns. For the given itration of the expreiment, embedding dimensions is set to `128`.\n",
@@ -243,9 +235,7 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "920646c9",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "Once a sentence is converted to a list of tokens, these tokens are position invariant i.e. are not aware what comes after what. positional embedding helps us in learning that. The positional embedding matrix has dimensions *seq_len* × *embedding_dim*, where each position gets its own vector that's added to the token embedding. The sequence length (also called context length) is the window of text the model can 'remember' at once when predicting the next character. \n",
     "There are two main approaches:\n",
@@ -278,9 +268,7 @@
   {
    "cell_type": "markdown",
    "id": "c19025fc-4d95-45c5-a0bf-ef0a100dc7a9",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "**Attention**: After embedding the inputs, the model needs to learn which previous tokens are most relevant for predicting the next one. For example, in 'Hello, my name is S____', the model should pay attention to the broader context, not just the immediate previous character. The mechanism for building attention is to project the input into three different representations: **Key (K)**, **Query (Q)**, and **Value (V)**. These are learned linear projections (just matrix multiplications that the model learns) of the input—in our case. While our embeddings are 128 dimensions, we project Q, K, V down to 16 dimensions each for this attention head. Below is a mental model for the idea behind them with respect to databases:\n",
     "\n",
@@ -292,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bcb2bed2-2381-4d7b-9405-201fe78eaa77",
    "metadata": {},
    "outputs": [
@@ -349,20 +337,16 @@
   {
    "cell_type": "markdown",
    "id": "9c9b4687",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "Just like a database query finds relevant records, the Query helps find which tokens in our sequence are most relevant to the current position. The model compares each Query against all Keys to compute attention scores, which determine how much each token should attend to every other token. These scores are then used to create a weighted sum of the Values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7f6e784a",
-   "metadata": {
-    "time_run": "9:12:30a"
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -528,9 +512,7 @@
   {
    "cell_type": "markdown",
    "id": "afac14de",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "## Feed-forward network"
    ]
@@ -568,9 +550,7 @@
   {
    "cell_type": "markdown",
    "id": "8957f779",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "The transformer architecture is built by stacking multiple layers of these MHA → FFN blocks. Each layer (or \"transformer block\") gets progressively better at understanding the input. Below is a rough struct.\n",
     "\n",
@@ -588,9 +568,7 @@
   {
    "cell_type": "markdown",
    "id": "11328875-ae82-49aa-bcb5-5cb6a0db6340",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "**Single block:**\n",
     "\n",
@@ -609,9 +587,7 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "e916a158",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Complete model:\n",
     "![](./static/blog5/Finale_gpt_model.png)"
@@ -673,9 +649,7 @@
   {
    "cell_type": "markdown",
    "id": "e140da6a",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "```py\n",
     "@torch.no_grad() \n",
@@ -763,24 +737,10 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.7"
-  },
-  "solveit_dialog_mode": "learning",
-  "solveit_ver": 2
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
