--- a/nbs/06_MultiModal.ipynb
+++ b/nbs/06_MultiModal.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
+   "id": "2d21a284",
    "metadata": {},
    "source": [
     "---\n",
@@ -9,7 +10,8 @@
     "title: 'Building a Multi Modal Nano-GPT from Scratch: Shakespeare Meets Fashion MNIST'\n",
     "\n",
     "---\n",
-    "\n"
+    "\n",
+    "date: 2025-10-17\n"
    ]
   },
   {
@@ -30,9 +32,7 @@
   {
    "cell_type": "markdown",
    "id": "ab425438",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "My [Nano GPT](https://tripathysagar.github.io/sagaTrip/gptdecoder.html) model could write Shakespeare-style text. Cool. But it had no idea what a boot looked like. Time to teach it. \n",
     "\n",
@@ -48,9 +48,7 @@
   {
    "cell_type": "markdown",
    "id": "88444e13",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "## Data Preparation\n",
     "There are two types of data that we have to prepare\n",
@@ -72,9 +70,7 @@
   {
    "cell_type": "markdown",
    "id": "6dfdb8aa",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "### Vision to Text\n",
     "\n",
@@ -91,9 +87,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dc2516f7",
-   "metadata": {
-    "time_run": "7:25:42a"
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -181,9 +175,7 @@
   {
    "cell_type": "markdown",
    "id": "e1e0c685",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "\n",
     "### Dataset Statistics\n",
@@ -210,9 +202,7 @@
   {
    "cell_type": "markdown",
    "id": "9d0db471",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "## Arch\n",
     "\n",
@@ -227,10 +217,7 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "0b9d8d1b",
-   "metadata": {
-    "solveit_ai": true,
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "\n",
     "![Final Model](./static/blog6/final_multimodal_model.png)\n"
@@ -239,9 +226,7 @@
   {
    "cell_type": "markdown",
    "id": "597e3034",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "### GPT2\n",
     "\n",
@@ -302,9 +287,7 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "6b68aef8",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "\n",
     "![The Vison Encoder](./static/blog6/vision_encoder.png.png)\n",
@@ -415,9 +398,7 @@
   {
    "cell_type": "markdown",
    "id": "752aa7fb",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "The loss function is used same as `Nano-GPT` i.e. `CrossEntropyLoss`.\n",
     "The combined training loss (averaged across both tasks) decreases from 1.66 to 0.78 after 30 epochs. However, tracking each task separately reveals very different learning dynamics.\n",
@@ -439,9 +420,7 @@
   {
    "cell_type": "markdown",
    "id": "2ca13ab1",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Image Inference\n",
     "\n",
@@ -473,9 +452,7 @@
   {
    "cell_type": "markdown",
    "id": "f841b4bb",
-   "metadata": {
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "\n",
     "![Inferenece](./static/blog6/vison_inferenece.png)\n",
@@ -486,10 +463,7 @@
   {
    "cell_type": "markdown",
    "id": "91f814f7",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "use_thinking": true
-   },
+   "metadata": {},
    "source": [
     "### Text Generation\n",
     "\n",
@@ -542,24 +516,10 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.7"
-  },
-  "solveit_dialog_mode": "learning",
-  "solveit_ver": 2
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
