--- a/nbs/09_KhazadDum.ipynb
+++ b/nbs/09_KhazadDum.ipynb
@@ -2,18 +2,16 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
+   "id": "9b11e645",
+   "metadata": {},
    "source": [
     "---\n",
     "output-file: KhazadDum.html\n",
     "title: Khazad Dum - Delving for Data with a Text2SQL Agent\n",
     "\n",
     "---\n",
-    "\n"
+    "\n",
+    "date: 2025-11-30\n"
    ]
   },
   {
@@ -161,11 +159,7 @@
    "source": []
   }
  ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 5
 }
