--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,7 +7,6 @@
     "---\n",
     "output-file: index.html\n",
     "sidebar: false\n",
-    "title: Home\n",
     "\n",
     "---\n",
     "\n"
@@ -17,62 +16,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets learn deeplearning. This is my blog. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Standalone Learning\n",
-    "| 📅 Date | 🎯 Blog Post | 🚀 Run in Colab |    \n",
-    "|:----:|:----:|:----:|\n",
-    "| 31/08/2025 | [LLM Text Generation](./01_LLMForwardPass.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/01_LLMForwardPass.ipynb) |\n",
-    "| 31/08/2025 | [LoRA PyTorch](./02_LoRAPytorch.ipynb)| [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/02_LoRAPytorch.ipynb) |\n",
-    "| 02/10/2025 | [Python Walk Through](./04_PythonWalkThrough.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/04_PythonWalkThrough.ipynb) |\n",
-    "| 15/10/2025 | [Building a Text Only Nano-GPT from Scratch](./05_GPTDecoder.ipynb)| [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/NanoTransformer/blob/main/nbs/01_GPTText2Text.ipynb) |\n",
-    "| 17/10/2025 | [Building a Multi Modal Nano-GPT from Scratch](./06_MultiModal.ipynb)|[![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/NanoTransformer/blob/main/nbs/03_MultiModal.ipynb) |\n",
-    "| 11/11/2025 | [Distilling Qwen2.5-Coder for Local Deployment](./07_DistilationWeightInit.ipynb)|[![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/07_DistilationWeightInit.ipynb) |\n",
-    "| 15/11/2025 | [Agent From First Principle](./08_AgentFromFirstPrinciple.ipynb) |[![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/08_AgentFromFirstPrinciple.ipynb) |\n",
-    "| 30/11/2025 | [Khazad Dum: Delving for Data with a Text2SQL Agent](./09_KhazadDum.ipynb) |[![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/09_KhazadDum.ipynb) |\n",
     "\n",
-    "\n"
+    "> *Learning Deep Learning from First Principles*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bigger Experiments"
+    "\n",
+    "Welcome to my blog where I explore machine learning concepts by building things from scratch. Each post includes runnable Colab notebooks so you can experiment yourself!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| 📅 Date | 🎯 Blog Post | \n",
-    "|:----:|:----:|\n",
-    "|23/09/2025 | [Domain Adaptation Fine Tune on Teleco Data](./03_DAFTSFT.ipynb)|"
+    "## 📚 Blog Archive\n",
+    "\n",
+    "::: {.callout-note collapse=\"false\" title=\"📅 January 2026\" appearance=\"minimal\"}\n",
+    "\n",
+    "| Date | Post | Colab |\n",
+    "|:-----|:-----|:------|\n",
+    "| 05 Jan | [Benchmarking LLM Tokenizers for Odia](./10_BenchmarkingTOkenizer4Odia.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/10_BenchmarkingTOkenizer4Odia.ipynb) |\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "::: {.callout-note collapse=\"true\" title=\"📅 November 2025\" appearance=\"minimal\"}\n",
+    "\n",
+    "| Date | Post | Colab |\n",
+    "|:-----|:-----|:------|\n",
+    "| 30 Nov | [Khazad Dum: Text2SQL Agent](./09_KhazadDum.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/09_KhazadDum.ipynb) |\n",
+    "| 15 Nov | [Agent From First Principle](./08_AgentFromFirstPrinciple.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/08_AgentFromFirstPrinciple.ipynb) |\n",
+    "| 11 Nov | [Distilling Qwen2.5-Coder](./07_DistilationWeightInit.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/07_DistilationWeightInit.ipynb) |\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "::: {.callout-note collapse=\"true\" title=\"📅 October 2025\" appearance=\"minimal\"}\n",
+    "\n",
+    "| Date | Post | Colab |\n",
+    "|:-----|:-----|:------|\n",
+    "| 17 Oct | [Building a Multi Modal Nano-GPT](./06_MultiModal.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/NanoTransformer/blob/main/nbs/03_MultiModal.ipynb) |\n",
+    "| 15 Oct | [Building a Text Only Nano-GPT](./05_GPTDecoder.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/NanoTransformer/blob/main/nbs/01_GPTText2Text.ipynb) |\n",
+    "| 02 Oct | [Python Walk Through](./04_PythonWalkThrough.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/04_PythonWalkThrough.ipynb) |\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "::: {.callout-note collapse=\"true\" title=\"📅 September 2025\" appearance=\"minimal\"}\n",
+    "\n",
+    "| Date | Post | Colab |\n",
+    "|:-----|:-----|:------|\n",
+    "| 23 Sep | [Domain Adaptation Fine Tune on Teleco Data](./03_DAFTSFT.ipynb) | — |\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "::: {.callout-note collapse=\"true\" title=\"📅 August 2025\" appearance=\"minimal\"}\n",
+    "\n",
+    "| Date | Post | Colab |\n",
+    "|:-----|:-----|:------|\n",
+    "| 31 Aug | [LLM Text Generation](./01_LLMForwardPass.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/01_LLMForwardPass.ipynb) |\n",
+    "| 31 Aug | [LoRA PyTorch](./02_LoRAPytorch.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/02_LoRAPytorch.ipynb) |\n",
+    "\n",
+    ":::"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.7"
   }
  },
  "nbformat": 4,
