--- a/nbs/01_LLMForwardPass.ipynb
+++ b/nbs/01_LLMForwardPass.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
+   "id": "c8afc93d",
    "metadata": {},
    "source": [
     "---\n",
@@ -9,7 +10,8 @@
     "title: 'The Magic Behind the Curtain: How LLMs Actually Generate Text'\n",
     "\n",
     "---\n",
-    "\n"
+    "\n",
+    "date: 2025-08-31\n"
    ]
   },
   {
