--- a/nbs/03_DAFTSFT.ipynb
+++ b/nbs/03_DAFTSFT.ipynb
@@ -9,7 +9,8 @@
     "title: 'Domain Adaption Fine-Tuning with LoRA: My Experiment on Mac M1'\n",
     "\n",
     "---\n",
-    "\n"
+    "\n",
+    "date: 2025-09-23\n"
    ]
   },
   {
