after add experiment

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,7 +7,8 @@
     "---\n",
     "output-file: index.html\n",
     "sidebar: false\n",
-    "\n",
+    "toc: false\n",
+    "repo-actions: false\n",
     "---\n",
     "\n"
    ]
@@ -17,7 +18,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "> *Learning Deep Learning from First Principles*"
+    "> *Learning from First Principles*"
    ]
   },
   {
@@ -38,6 +39,7 @@
     "\n",
     "| Date | Post | Colab |\n",
     "|:-----|:-----|:------|\n",
+    "| 16 Jan | [Small LLMs Can't Add—But They Can Learn to Ask](./11_llm-arithmetic-experiments.ipynb) |- |\n",
     "| 05 Jan | [Benchmarking LLM Tokenizers for Odia](./10_BenchmarkingTOkenizer4Odia.ipynb) | [![Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tripathysagar/sagaTrip/blob/main/nbs/10_BenchmarkingTOkenizer4Odia.ipynb) |\n",
     "\n",
     ":::\n",
